src/objects/FA_Training_Venue__c.object
<CustomObject>
    <fields>
        <fullName>FA_Address_Line_1__c</fullName>
        <label>Address Line 1</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FA_Address_Line_2__c</fullName>
        <label>Address Line 2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FA_Address_Line_3__c</fullName>
        <label>Address Line 3</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FA_Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>United Kingdom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Singapore</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FA_Image_URL__c</fullName>
        <label>Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FA_Local_facilities__c</fullName>
        <label>Local Facilities</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FA_Overview__c</fullName>
        <label>Overview</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FA_Postcode__c</fullName>
        <label>Postcode</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FA_Things_to_do__c</fullName>
        <label>Things To Do</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FA_Town_City__c</fullName>
        <label>Town City</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FA_Travel_Information__c</fullName>
        <label>Travel Information</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FA_Venue_Image__c</fullName>
        <formula>IMAGE( FA_Image_URL__c, &quot;Venue Image&quot;,200,300)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Venue Image</label>
        <type>Text</type>
    </fields>
    <label>Training Venue</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Venue</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>FA_cannotCreateVenuewithExistingName</fullName>
        <active>false</active>
        <description>Restrict creation of Duplicates of Exisitng venues</description>
        <errorConditionFormula>IF( OR(Name=&apos;Kingston Training Centre&apos;,Name=&apos;Singapore Training Centre&apos;),ISNEW(),false)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Already a record exists with this name.Please enter a different name</errorMessage>
    </validationRules>
</CustomObject>